<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.leanh.activity.HomeActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never" />
</menu>
